# OmniCore

./: .gitignore  CMakeLists.txt
Base/: BaseCreateDTO.hpp  BaseModel.hpp  BaseUpdateDTO.hpp
Database/: DataTable.hpp  Database.cpp  Database.hpp  Datatable.cpp
GlobalConfiguration/: GlobalConfiguration.cpp  GlobalConfiguration.hpp
GlobalConfiguration/DTOs/: UpdateGlobalConfiguration.hpp
GlobalConfiguration/Models/: GlobalConfiguration.hpp
GlobalConfiguration/Repositories/: GlobalConfiguration.cpp  GlobalConfiguration.hpp
Item/: Item.cpp  Item.hpp
Item/Repositories/: Item.cpp  Item.hpp
ItemBrand/: ItemBrand.cpp  ItemBrand.hpp
ItemBrand/Repositories/: ItemBrand.cpp  ItemBrand.hpp
ItemGroup/: ItemGroup.cpp  ItemGroup.hpp
ItemGroup/Repositories/: ItemGroup.cpp  ItemGroup.hpp
Session/: Session.cpp  Session.hpp
Session/DTOs/: Login.hpp  Logout.hpp
Session/Enums/: LogoutReason.hpp
Session/Models/: AuthPayload.hpp  LogoutPayload.hpp  Payload.hpp  SessionData.hpp
Session/Repositories/: Session.cpp  Session.hpp
User/: User.cpp  User.hpp
User/DTOs/: ChangePassword.hpp  CreateUser.hpp  GetUser.hpp  SearchUsers.hpp  UpdateUser.hpp
User/Enums/: PermissionMode.hpp  UserFilter.hpp
User/Models/: User.hpp
User/Repositories/: User.cpp  User.hpp
